layout issues

--- a/style.css
+++ b/style.css
@@ -274,24 +274,28 @@ html,body{
 .main-block .hero-info{
     position: absolute;
     width: 90%;
-    height: 80%;
+    height: 90%;
+    transform: translate(-50%,-45%);
+    top:50%;
+    left: 50%;
     /* border: 1px solid white; */
     border-radius: 10px;
     color: white;
     display: flex;
     flex-direction: column;
-    padding: 2rem 0;
+    padding-top: 2rem;
     /* background-color: blue; */
 }
 
 .hero-info .hero-info-name-block{
     width: 100%;
-    height: 40%;
+    height: 30%;
     /* background-color: #fd7e14; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 2rem;
         /* background-color: yellow; */
 
 }
@@ -318,11 +322,12 @@ html,body{
 
 .hero-info .hero-info-address-block{
     width: 100%;
-    height: 60%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    padding: 2rem 0;
     /* background-color: red; */
 }
 
